@@ -5,16 +5,17 @@
 plotRSA(x = 0, y = 0, x2 = 0, y2 = 0, xy = 0, w = 0, wx = 0,
   wy = 0, x3 = 0, xy2 = 0, x2y = 0, y3 = 0, b0 = 0, type = "3d",
   model = "full", xlim = NULL, ylim = NULL, zlim = NULL, xlab = NULL,
-  ylab = NULL, zlab = NULL, surface = "predict", lambda = NULL,
-  rotation = list(x = -63, y = 32, z = 15), label.rotation = list(x = 19, y
-  = -40, z = 92), gridsize = 21, bw = FALSE, legend = TRUE,
-  param = TRUE, axes = c("LOC", "LOIC", "PA1", "PA2"), project = FALSE,
-  maxlines = FALSE, cex = 1.2, points = list(data = NULL, show = NA, value
-  = "raw", jitter = 0, color = "black", cex = 0.5, out.mark = FALSE),
-  demo = FALSE, fit = NULL, link = "identity", tck = c(1.5, 1.5, 1.5),
-  distance = c(1.3, 1.3, 1.4), border = TRUE, contour = list(show = FALSE,
-  color = "grey40", highlight = c()), hull = FALSE, SP.CI = FALSE,
-  pal = NULL, pal.range = "box", pad = 0, ...)
+  ylab = NULL, zlab = NULL, main = "", surface = "predict",
+  lambda = NULL, rotation = list(x = -63, y = 32, z = 15),
+  label.rotation = list(x = 19, y = -40, z = 92), gridsize = 21,
+  bw = FALSE, legend = TRUE, param = TRUE, axes = c("LOC", "LOIC",
+  "PA1", "PA2"), project = FALSE, maxlines = FALSE, cex = 1,
+  points = list(data = NULL, show = NA, value = "raw", jitter = 0, color =
+  "black", cex = 0.5, out.mark = FALSE), demo = FALSE, fit = NULL,
+  link = "identity", tck = c(1.5, 1.5, 1.5), distance = c(1.3, 1.3, 1.4),
+  border = TRUE, contour = list(show = FALSE, color = "grey40", highlight =
+  c()), hull = FALSE, SP.CI = FALSE, pal = NULL, pal.range = "box",
+  pad = 0, ...)
 }
 \arguments{
   \item{x}{Either an RSA object (returned by the \code{RSA}
@@ -59,6 +60,8 @@ plotRSA(x = 0, y = 0, x2 = 0, y2 = 0, xy = 0, w = 0, wx = 0,
 
   \item{zlab}{Label for z axis}
 
+  \item{main}{the main title of the plot}
+
   \item{surface}{Method for the calculation of the surface
   z values. "predict" takes the predicted values from the
   model, "smooth" uses a thin plate smoother (function
@@ -83,7 +86,8 @@ plotRSA(x = 0, y = 0, x2 = 0, y2 = 0, xy = 0, w = 0, wx = 0,
 
   \item{legend}{Print color legend for z values?}
 
-  \item{cex}{Font size factor for axes labels}
+  \item{cex}{Font size factor for axes labels, axes titles,
+  and the main title}
 
   \item{type}{\code{3d} for 3d surface plot, \code{contour}
   for 2d contour plot, "interactive" for interactive
@@ -97,6 +101,7 @@ plotRSA(x = 0, y = 0, x2 = 0, y2 = 0, xy = 0, w = 0, wx = 0,
   = z. This data frame is automatically generated when the
   plot is based on a fitted RSA-object} \item{show = TRUE:
   Should the original data points be overplotted?}
+  \item{color = "black": Color of the points}
   \item{value="raw": Plot the original z value,
   "predicted": plot the predicted z value} \item{jitter =
   0: Amount of jitter for the raw data points. For z
@@ -181,7 +186,10 @@ plotRSA(x = 0, y = 0, x2 = 0, y2 = 0, xy = 0, w = 0, wx = 0,
   \item{tck}{A vector of three values defining the position
   of labels to the axes (see ?wireframe)}
 
-  \item{pal}{A palette for shading}
+  \item{pal}{A palette for shading. You can use
+  \code{\link{colorRampPalette}} to construct a color ramp,
+  e.g. \code{plot(r.m, pal=colorRampPalette(c("darkgreen",
+  "yellow", "darkred"))(20))}}
 
   \item{pal.range}{Should the color range be scaled to the
   box (\code{pal.range = "box"}, default), or to the min
